--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -14,10 +14,11 @@
   src: local('Open Sans Condensed Light'), local('OpenSansCondensed-Light'), url('./OpenSansCondensed-Light.ttf') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-
+/*
 .page-enter-active, .page-leave-active {
   transition: opacity .5s;
 }
 .page-enter, .page-leave-to {
   opacity: 0;
 }
+*/
