--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -142,9 +142,14 @@ button:focus {outline:0;}
 }
 */
 .lds-spinner {
-  color: official;
+  color: black;
   display: inline-block;
-  position: relative;
+  margin: auto;
+  position: absolute;
+  left: 50%;
+  margin-left: -32px;
+  top: calc(50% - 60px);
+  margin-top: -32px;
   width: 64px;
   height: 64px;
 }
@@ -161,7 +166,7 @@ button:focus {outline:0;}
   width: 5px;
   height: 14px;
   border-radius: 20%;
-  background: #fff;
+  background: grey;
 }
 .lds-spinner div:nth-child(1) {
   transform: rotate(0deg);
