--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -141,6 +141,17 @@ button:focus {outline:0;}
   opacity: 0;
 }
 */
+.blur {
+  background: #F5F5F5;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 95;
+  transition: all 0.8s ease-in-out;
+  opacity: 0.95;
+  visibility: visible;
+}
+
 .lds-spinner {
   color: black;
   display: inline-block;
